Changes from papeeria

--- a/Version_panchito.tex
+++ b/Version_panchito.tex
@@ -12,6 +12,8 @@
 \usepackage{pst-all}
 \usepackage{graphicx}
 \usepackage{amsmath,amsfonts}
+% * <Francisco de Izaguirre> 10:31:48 21 Sep 2018 UTC-0300:
+% esto es un comnetario
 \usepackage{amssymb} % ADDED
 \usepackage{times}
 \usepackage{latexsym}
