Changes from papeeria

--- a/Template.tex
+++ b/Template.tex
@@ -28,7 +28,7 @@
 \usetikzlibrary{matrix,positioning,arrows,decorations.pathmorphing,shapes}
 \usetikzlibrary{shapes,snakes}
 \usepackage{graphicx}
-%---------------
+%---------------hola
 \usepackage{subfigure}
 \usepackage{mathtools}
 \usepackage{booktabs}
