--- a/biblio.bib
+++ b/biblio.bib
@@ -1,4 +1,11 @@
-@article{recoba2016two,
+@misc{scripts,
+  title = {{Gitlab} Scripts },
+  howpublished = {\url{https://gitlab.fing.edu.uy/metnum/MN18tarea1/-/archive/master/MN18tarea1-master.zip}},
+  note = {Accessed: 2018-9-22}
+}
+
+
+@article{Recoba,
 author = {Recoba, Rodrigo and Robledo, Franco and Romero, Pablo and Viera, Omar},
 title = {Two-node-connected star problem},
 journal = {International Transactions in Operational Research},
@@ -9,6 +16,7 @@ pages = {523--543},
 keywords = {two-node-connected star problem, ring star problem, GRASP, computational complexity},
 year = {2018},
 }
+
 @incollection{Karp72,
   author = {Karp, R.},
   booktitle = {Complexity of Computer Computations},
